# muography

./: .gitignore  AngleReconstruct.py  CAEN Channel QA.ipynb  CMakeLists.txt  README.md  analysis.py  back_project.cxx  build.sh  compile.sh  cry_compile.sh  gen_cry.sh  hexagon.xml  setup.file  setup_env.sh  start.sh  steering.py  telescope.xml
.ipynb_checkpoints/: README-checkpoint.md
3d_printing/: rect_board_stack.step  rect_board_stack.stl
bash/: build.sh  config.sh  cry_compile.sh  dd4hep_compile.sh  gen_cry.sh  hepmc_compile.sh  iteration.sh  iteration_1.sh  multi.sh  setup_env.sh  xml_compile.sh
compact/: materials.xml
cpp/: back_project_single.cxx  remote.cxx  setup.file  testMain.cc
cry_v1.7/: setup
detectors/: nine_square_metal_rewritten_4.xml  nine_square_rewritten_2.xml  nine_square_rewritten_5.xml  nine_square_rewritten_8.xml
gamma_spectroscopy/: README.md  multi.py  resolve.py
python/: Muon_Decay_Logistics.ipynb  dd4hep_viz.py  generate_soil_target.py  plotting_2d_hist.ipynb  root_to_pkl_and_splitting.py  steering.py
raspberrypi/: cosmic.txt  iteration.sh  ptrg.txt  test_janus_recording_ptrg.py  test_janus_recording_tlogic.py
script/: GNN_plot.ipynb  multi_detector_analyze.ipynb  root_to_pkl_and_splitting.ipynb  root_to_pkl_and_splitting.py  test_janus_recording.py  training_data.ipynb  voxel_visual.ipynb
src/: Hexagon_geo.cpp  RockWithCubeCutout_geo.cpp  SiPMonTile_geo.cpp  Sphere_geo.cpp  ZeroDegreeCalorimeterSiPMonTile_geo.cpp
xml/: merge.xml  metal.xml  planar_detector.xml  square_2x4x8.xml  square_2x4x8_v2.xml  (+1 more)
(+95 files in other folders)
